--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "presets": ["stage-1"],
+    "presets": [
+      "stage-1"
+    ],
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
